Fixed task-card-title overflow in styes.css and changed the task-title class to task-card-title for better semanticity

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,8 +129,11 @@ button:active {
 }
 
 /* Task title styling */
-.task-title {
+.task-card-title {
+  max-width: 200px;
   font-size: 1.25rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* *Task options button styling* */
